[package]
name = "meshio-mmd"
version = "2019.5.27"
description = "MikuMikuDance 3D file format importer"
authors = ["Laphicet Crowe"]
keywords = ["mmd", "graphics", "3d", "model", "mesh", "pmd", "pmx"]
license = "GPL-3.0"

[dependencies]
bitflags = "1.0.4"
bytes = "0.4.12"
cgmath = "0.17.0"
encoding = "0.2.33"
nom = "5.0.0-beta2"
